--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <div class="sidebar">
     <div class="sidebar-content">
       <!-- Profile Image -->
-      <div class="profile-img">
+    <!--  <div class="profile-img">
         <img src="assets/images/IMG_20240403_013915_006 (1).jpg" alt="Vaishnavi's Profile Picture">
-      </div>
+      </div> -->
       <h2>Vaishnavi Nalla</h2>
       <p>Masters in Computer Science</p>
       <p>Wright State University</p>
